fix: re-align advanced search slider dots

--- a/app/styles/pages/_media-browse.scss
+++ b/app/styles/pages/_media-browse.scss
@@ -509,7 +509,7 @@
 }
 
 html:not([dir=rtl]) .media-browse .noUi-horizontal .noUi-handle {
-  right: 0;
+  right: -4px;
 }
 
 .media-trailer {
